[fix] - bug related to the scrollbar and adjusted padding for FAQ

--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,3 +1,5 @@
-.page-home {
-    padding-bottom: var(--mobile-cta-height);
+@media (max-width: 768px) {
+    .page-home {
+        padding-bottom: 40;
+    }
 }
