--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -26,3 +26,13 @@ body {
 * {
     font-family: "Montserrat", sans-serif;
 }
+html,
+body {
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE / Edge */
+}
+
+html::-webkit-scrollbar,
+body::-webkit-scrollbar {
+    display: none; /* Chrome, Safari */
+}
